Mdo promotion page size alignment fixes

--- a/docroot/react/src/views/secure/my-meetings/my-meetings.less
+++ b/docroot/react/src/views/secure/my-meetings/my-meetings.less
@@ -100,7 +100,7 @@
                             justify-content: center;
                             // height: calc(100% - 72px);
                             margin: auto -10%;
-                            padding: 10% 0;
+                            padding: 5% 0;
                             .android {
                                 background: url('../../../assets/playstore.png');
                                 height: 100%;
@@ -238,7 +238,19 @@
                     display: block;
                 }
             }
-
+            .promotion-container{
+                .promotion{              
+                    .message-container {
+                        .wrapper {                            
+                            .badgets {                               
+                                .icon {
+                                    width: 42%;  
+                                }
+                            }
+                        }
+                    }
+                }
+            }
             .wifi {
                 display: block;
                 border-top: #CCCCCC solid 1px;
